<resources>
    <string name="app_name">Essentials E1</string>
    <string name="change_initiatives">Change Initiatives</string>
    <string name="dashboard">Dashboard</string>
    <string name="next_question">Next question</string>
    <string name="title_survey_question">Survey question (%1$d/%2$d)</string>
    <string name="survey_finished">The survey is finished</string>
    <string name="back_survey_finished">Back to homescreen</string>
    <string name="surveys">Surveys</string>
    <string name="view_survey">View survey</string>
    <string name="changes">Changes</string>
    <string name="homeScreen">Home</string>
    <string name="my_changes">My changes</string>
    <string name="my_teams">My Teams</string>
    <string name="changemanager_functions">Changemanager functions</string>
    <string name="ratingbar_question">Ratingbar for question</string>
    <string name="ci_screen">Change Initiative:%n%1$s</string>
    <string name="information">Information</string>
    <string name="roadmap">Roadmap</string>
    <string name="description">Description</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="sponsor">Sponsor</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="essentials_logo_text">Essentials Logo</string>
    <string name="graph">More graphs</string>
    <string name="name_display">%1$s %2$s</string>
    <string name="start_survey">Start Survey</string>
    <string name="not_found">The requested page is not found</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="amount_of_questions">Amount of questions</string>
    <string name="your_answer">Your answer</string>
    <string name="survey_completed">Survey was already completed</string>
    <string name="feedback_question">How do you feel about this change initiative?</string>
    <string name="filled_in_by">Amount of people that completed the survey</string>
    <string name="survey_already_filled">Survey already filled in</string>
    <string name="log_out">Log out</string>
    <string name="no_teams_available">There are no teams available at the moment</string>
    <string name="myChange_question_example">What do you think of this change?</string>
    <string name="myChange_timesChosen">Times chosen</string>
    <string name="myChange_answers">Answers</string>
    <string name="question">Question: </string>

    <string name="no_changes_available">There are no changes available at the moment</string>
    <string name="no_surveys_available">There are no surveys available at the moment</string>
    <string name="chartDescription">% of mood for Change</string>
    <string name="dataSetDescription">Overal Mood</string>
    <string name="Overall_happiness_not_applicable">Overall happiness: not yet applicable</string>
    <string name="Overall_happiness_applicable">Overall happiness: %1$s</string>
    <string name="chosen_perc">%1$s %%</string>
    <string name="change_initatives">Change initatives</string>
    <string name="average_mood_after_this_survey">Average mood after this survey:</string>
    <string name="emoji_showing_average_happiness">Emoji showing average happiness</string>
    <string name="overall_happiness_100">Overall happiness: 100 %</string>
    <string name="all_questions_in_this_survey">All questions in this survey:</string>
    <string name="teams_fragment_header">Teams</string>
    <string name="overflow_more_changeinitiative">More change initiative info</string>
    <string name="overflow_more_graphs">More graphs</string>
    <string name="employee_fragment_title">Employee information</string>
    <string name="user_information">User information</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email_address">Email Address</string>
    <string name="essentials_website_link">https://essentialstoolkit.netlify.app/</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="no_data_text">No moods available for Change</string>
    <string name="speedometer_label">% of Surveys filled in</string>

</resources>