<?xml version="1.0" encoding="utf-8"?>
<!--
    @author Ziggy Moens
    @author Simon De Wilde
    @author Kilian Hoefman
    @author Sébastien De Pauw
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hogentessentials1.essentials.ui.homeScreen.HomeScreenViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainedlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.homeScreen.HomeScreenFragment">


        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65999997">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".ui.homeScreen.HomeScreenFragment">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/changes"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-black"
                    android:onClick="@{()->viewModel.onChangeInitiativesClicked()}"
                    android:text="@string/changes"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:icon="@drawable/sync_black_18dp"
                    app:iconSize="60dp"
                    app:iconTint="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/surveys"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@color/brown"
                    app:strokeWidth="2.5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/my_changes"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-black"
                    android:onClick="@{()->viewModel.onMyChangeInitiativesClicked()}"
                    android:text="@string/my_changes"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:icon="@drawable/sync_black_18dp"
                    app:iconSize="60dp"
                    app:iconTint="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:strokeColor="@color/brown"
                    app:strokeWidth="2.5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/surveys"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="sans-serif-black"
                    android:onClick="@{()->viewModel.onSurveysClicked()}"
                    android:text="@string/surveys"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:icon="@drawable/content_paste_black_18dp"
                    app:iconSize="60dp"
                    app:iconTint="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/changes"
                    app:strokeColor="@color/brown"
                    app:strokeWidth="2.5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dashboard"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-black"
                    android:onClick="@{()->viewModel.onDasboardClicked()}"
                    android:text="@string/dashboard"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="visible"
                    app:icon="@drawable/dashboard_black_18dp"
                    app:iconSize="60dp"
                    app:iconTint="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/my_changes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:strokeColor="@color/brown"
                    app:strokeWidth="2.5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/my_team"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-black"
                    android:onClick="@{()->viewModel.onTeamsClicked()}"
                    android:text="@string/my_teams"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:icon="@drawable/people_black_18dp"
                    app:iconSize="60dp"
                    app:iconTint="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/title_cm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/surveys"
                    app:layout_constraintVertical_bias="0.0"
                    app:strokeColor="@color/brown"
                    app:strokeWidth="2.5dp" />

                <TextView
                    android:id="@+id/title_cm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/changemanager_functions"
                    android:textSize="16sp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toTopOf="@+id/dashboard"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>